Remove min width of button on featured story block to avoid overflow when previewed on drupal with certain theme

--- a/src/feature-story/style.scss
+++ b/src/feature-story/style.scss
@@ -174,7 +174,6 @@
     text-decoration: none;
     transition: all ease 0.2s;
     margin-top:2rem;
-    min-width:250px;
     letter-spacing:0.9px;
     &:hover {
       cursor: pointer;
